# GRETEL

./: .gitignore  CURRENT.md  LICENSE  README.md  dockerfile  dockerfile.gpu  environment.yml  execution_pipeline.txt  future_main.py  main.py  output.out  pyproject.toml  requirements.txt
config/: ADHD+SVM+Graph2Vec_DCE.jsonc  ADHD+SVM+Graph2Vec_DCES.jsonc  ADHD_SVM-G2V_DCE.jsonc  ASD+ASD_Custom+DCES.jsonc  ASD+ASD_Custom+DDBS.jsonc  ASD+ASD_Custom+OBS.jsonc  ASD+DCE_DM.jsonc  ASD+GCN_DCERank.jsonc  ASD+SVM+Graph2Vec_DCE.jsonc  ASD+TCR+BBBP_GCN_DCE.jsonc  ASD+TCRs+BBBP_GCN_DCE.jsonc  ASD_ASD-Custom_DCE.jsonc  ASD_ASD-Custom_DDBS.jsonc  ASD_ASD-Custom_OBS.jsonc  ASD_GCN_DCE.jsonc  ASD_SVM-G2V_DCE.jsonc  BBBP_GCN_DCE.jsonc  BBBP_GCN_MACCS.json  BBBP_GCN_RSGG.json  BBBP_KNN-MOL_DCE.json  BBBP_SVM-MOL_DCE.json  TCR-1000-5k-0.3_GCN_RSGG.jsonc  TCR-128-32-0.2_GCN_DCE.jsonc  TCR-128-32-0.2_GCN_DDBS.jsonc  TCR-128-32-0.2_GCN_OBS.jsonc  TCR-128-32-0.2_GCN_RSGG.jsonc  TCR-128-32-0.2_KNN-G2V_DCE.jsonc  TCR-128-32-0.2_SVM-G2V_DCE.jsonc  TCR-150-100-0.3+TCC+iRand.jsonc  TCR-150-100-0.3+TCC+pRand.jsonc  TCR-150-100-0.3_TCC_DCE.jsonc  TCR-150-100-0.3_TCC_DCES.jsonc  TCR-150-100-0.3_TCC_iRand.jsonc  TCR-150-100-0.3_TCC_pRand.jsonc  TCR-500-28-0.3_GCN_G-CounteRGAN.jsonc  TCR-500-28-0.3_GCN_RSGG.jsonc  TCR-500-64-0.4_GCN_GCounteRGAN.jsonc  TCR-500-64-0.4_GCN_RSGG.jsonc  TWITTER_DCE.json  tobechecked_BBBP_GCN_DC_full.json  (+1 more)
gold_examples/: 1-evaluating_explainers.ipynb
lab/: 1-evaluation_pipeline.ipynb  1-running_gretel.ipynb  2-evaluating_new_dataset.ipynb  2-visualizing_results.ipynb  (+9 more)
(+28997 files in other folders)
