[tool.poetry]
name = "gretel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
picologging = "^0.9.3"
exmol = "^3.0.3"
gensim = "^4.3.2"
joblib = "^1.3.2"
jsonpickle = "^3.0.2"
karateclub = "^1.3.3"
matplotlib = "^3.8.2"
networkx = "2.6.3"
numpy = "1.22.4"
pandas = "1.3.5"
rdkit = "^2023.9.4"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
selfies = "^2.1.1"
sqlalchemy = "^2.0.25"
black = "^24.1.1"
typing-extensions = "^4.9.0"
torch-geometric = "^2.4.0"
dgl = "1.1.3"
ipython = "8.18.1"
ipykernel = "^6.29.0"
flufl-lock = "^8.0.2"
jsonc-parser = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
